@@ -37,6 +37,7 @@ version <next>:
 - VideoToolbox ProRes hwaccel
 - support loongarch.
 - aspectralstats audio filter
+- adynamicsmooth audio filter
 
 
 version 4.4:
